--- a/index.html
+++ b/index.html
@@ -515,13 +515,9 @@
                 <div class="min-w-screen min-h-screen flex items-center justify-center py-5">
                     <div class="w-full px-5 py-16 md:py-24 text-gray-300">
                         <div class="w-full max-w-6xl mx-auto">
-                            <div class="text-center max-w-xl mx-auto">
-                                <h1
-                                    class="text-6xl md:text-7xl font-bold mb-5 text-gray-600 font-[font1] leading-6xl tracking-tighter capitalize">
-                                    what people say about as</h1>
-                                <h3 class="text-xl mb-5 font-semibold font-[font3]">Lorem ipsum dolor sit amet
-                                    consectetur adipisicing
-                                    elit.</h3>
+                            <div class="text-center max-w-xl mx-auto mb-14">
+                                <h1 data-translate="testimonials_heading" class="text-6xl md:text-7xl font-bold mb-5 text-gray-600 font-[font1] leading-6xl tracking-tighter capitalize">
+                                    What People Are Saying About Us</h1>
                             </div>
                             <div class="-mx-3 md:flex items-start">
                                 <div class="px-3 md:w-1/3">
@@ -722,8 +718,8 @@
             <section class="pb-28">
                 <div class="grid max-w-6xl grid-cols-1 px-6 mx-auto lg:px-8 md:grid-cols-2 md:divide-x">
                     <div class="py-6 md:py-0 md:px-6">
-                        <h1 class="text-4xl font-semibold font-[font1]">Get in touch</h1>
-                        <p class="pt-2 pb-4 font-[font3]">Fill in the form to start a conversation</p>
+                        <h1 class="text-4xl font-semibold font-[font1]" data-translate="get_in_touch">Get in touch</h1>
+                        <p class="pt-2 pb-4 font-[font3]" data-translate="fill_form">Fill in the form to start a conversation</p>
                         <div class="space-y-3 font-[font3]">
                             <p class="flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
@@ -732,7 +728,7 @@
                                         d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
                                         clip-rule="evenodd"></path>
                                 </svg>
-                                <span>your Address</span>
+                                <span data-translate="your_address">your Address</span>
                             </p>
                             <p class="flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
@@ -741,7 +737,7 @@
                                         d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z">
                                     </path>
                                 </svg>
-                                <span>123456789</span>
+                                <span data-translate="phone_number">123456789</span>
                             </p>
                             <p class="flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
@@ -750,38 +746,38 @@
                                     </path>
                                     <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
                                 </svg>
-                                <span> intlmotor.dircom@outlook.com </span>
+                                <span data-translate="email">intlmotor.dircom@outlook.com</span>
                             </p>
                         </div>
                     </div>
-
+            
                     <!-- Form -->
                     <form action="mailto:intlmotor.dircom@outlook.com " method="post" enctype="text/plain"
                         class="font-[font3] flex flex-col py-6 space-y-6 md:py-0 md:px-6 text-black">
                         <label class="block">
-                            <span class="mb-1 text-white">Full name</span>
+                            <span class="mb-1 text-white" data-translate="full_name">Full name</span>
                             <input type="text" name="FullName" placeholder="Leroy Jenkins"
                                 class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-purple-600 px-2 py-2"
                                 required>
                         </label>
                         <label class="block">
-                            <span class="mb-1 text-white">Email address</span>
+                            <span class="mb-1 text-white" data-translate="email_address">Email address</span>
                             <input type="email" name="Email" placeholder="leroy@jenkins.com"
                                 class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-purple-600 px-2 py-2"
                                 required>
                         </label>
                         <label class="block">
-                            <span class="mb-1 text-white">Message</span>
+                            <span class="mb-1 text-white" data-translate="message">Message</span>
                             <textarea rows="3" name="Message"
                                 class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-purple-600 dark:bg-gray-100 px-2 py-2"
                                 required></textarea>
                         </label>
                         <button type="submit"
-                            class="self-center px-8 py-3 text-lg rounded focus:ring-opacity-75 dark:bg-purple-800 dark:text-gray-50">Submit</button>
+                            class="self-center px-6 py-2 text-lg rounded-lg focus:ring-opacity-75 dark:bg-purple-800 dark:text-gray-50" data-translate="submit">Submit</button>
                     </form>
                 </div>
             </section>
-
+            
         </main>
         <footer class="bg-[#0C0712] text-gray-100 border-t-2 border-zinc-500">
             <div class="container mx-auto px-4 py-16">
