--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <div class="relative font-[font0]">
                     <span data-translate="space360"
-                        class="cursor-pointer uppercase tracking-widest text-sm font-[font0] hover:text-gray-400">360
+                        class="cursor-pointer uppercase tracking-widest text-sm font-[font0] hover:text-gray-400"> My 360
                         space</span>
                     <div
                         class="absolute top-full left-0 bg-gray-900 hidden group-hover:flex flex-col p-2 opacity-0 transition-all group-hover:opacity-100">
@@ -152,31 +152,33 @@
                         My Company
                     </summary>
                     <div class="mt-3 ml-4 pl-2 border-l border-purple-500 space-y-2">
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 1</a>
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 2</a>
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 3</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">About Us</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Careers</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Contact
+                            Information</a>
                     </div>
                 </details>
                 <!-- Dropdown 2 -->
                 <details class="mb-6">
                     <summary class="cursor-pointer text-lg font-semibold text-gray-200 hover:text-purple-500 flex items-center">
-                        Dropdown 2
+                        ACQUISITION OPTIONS
                     </summary>
                     <div class="mt-3 ml-4 pl-2 border-l border-purple-500 space-y-2">
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 1</a>
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 2</a>
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 3</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Business Options</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Personal Options</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Public Sector Options</a>
                     </div>
                 </details>
                 <!-- Dropdown 3 -->
                 <details class="mb-6">
                     <summary class="cursor-pointer text-lg font-semibold text-gray-200 hover:text-purple-500 flex items-center">
-                        Dropdown 3
+                        My 360 SPACE
                     </summary>
                     <div class="mt-3 ml-4 pl-2 border-l border-purple-500 space-y-2">
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 1</a>
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 2</a>
-                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Link 3</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Insurance</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Maintenance & Installation</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Shop</a>
+                        <a href="#" class="block text-gray-400 hover:text-blue-500 transition duration-200">Sell my Vehicle</a>
                     </div>
                 </details>
             </div>
