--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
                 slidesToShow: 1,
                 slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 1000, // 5 seconds
+                autoplaySpeed: 5000, // 5 seconds
                 arrows: false, // Disable navigation arrows if you don't need them
                 dots: true, // Display navigation dots
                 fade: true, // Optional: For smooth fade effect
+                pauseOnHover: false,       // Pause the slider when hovering over it
+                pauseOnFocus: false,  
             });
         }); 
     </script>
