--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </div>
             </section>
             <section id="services">
-                <div class="py-8 px-4 max-w-screen sm:py-16 lg:px-6 flex items-center justify-center flex-col">
+                <div class="page3 py-8 px-4 max-w-screen sm:py-16 lg:px-6 flex items-center justify-center flex-col">
                     <div
                         class="max-w-screen-md mb-8 lg:mb-16 text-center flex items-center justify-center flex-col px-5">
                         <h1 class="mb-4 text-4xl font-extrabold tracking-tight text-gray-100 font-[font1]"
