--- a/index.html
+++ b/index.html
@@ -807,7 +807,6 @@
                     </form>
                 </div>
             </section>
-
         </main>
         <footer class="bg-[#0C0712] text-gray-100 border-t-2 border-zinc-500">
             <div class="container mx-auto px-4 py-16">
@@ -815,81 +814,55 @@
                     <!-- Logo and Description -->
                     <div class="sm:col-span-2">
                         <a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
-                            <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="footerLogo"
-                                class="h-10">
+                            <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="footerLogo" class="h-10">
                         </a>
                         <div class="mt-6 lg:max-w-md">
-                            <p class="text-sm text-gray-400">
-                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                                laudantium, totam rem aperiam.
+                            <p data-translate="footerDescription1" class="text-sm text-gray-400">
+                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
                             </p>
-                            <p class="mt-4 text-sm text-gray-400">
-                                Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                                explicabo.
+                            <p data-translate="footerDescription2" class="mt-4 text-sm text-gray-400">
+                                Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
                             </p>
                         </div>
                     </div>
                     <!-- Contacts Section -->
                     <div class="space-y-4 text-sm">
-                        <p class="text-base font-bold tracking-wide">Contacts</p>
+                        <p data-translate="footerContactPhone" class="text-base font-bold tracking-wide">Phone:</p>
                         <div class="flex items-center">
-                            <span class="mr-2 text-gray-300">Phone:</span>
-                            <a href="tel:850-123-5021"
-                                class="text-gray-400 hover:text-purple-400 transition-colors duration-300">850-123-5021</a>
+                            <a href="tel:850-123-5021" class="text-gray-400 hover:text-purple-400 transition-colors duration-300">850-123-5021</a>
                         </div>
+                        <p data-translate="footerContactEmail" class="text-base font-bold tracking-wide">Email:</p>
                         <div class="flex items-center">
-                            <span class="mr-2 text-gray-300">Email:</span>
-                            <a href="mailto:info@lorem.mail"
-                                class="text-gray-400 hover:text-purple-400 transition-colors duration-300">info@lorem.mail</a>
+                            <a href="mailto:info@lorem.mail" class="text-gray-400 hover:text-purple-400 transition-colors duration-300">info@lorem.mail</a>
                         </div>
+                        <p data-translate="footerContactAddress" class="text-base font-bold tracking-wide">Address:</p>
                         <div class="flex items-center">
-                            <span class="mr-2 text-gray-300">Address:</span>
-                            <a href="https://www.google.com/maps" target="_blank" rel="noopener noreferrer"
-                                class="text-gray-400 hover:text-purple-400 transition-colors duration-300">
+                            <a href="https://www.google.com/maps" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-purple-400 transition-colors duration-300">
                                 312 Lovely Street, NY
                             </a>
                         </div>
                     </div>
                     <!-- Social Media Links -->
                     <div>
-                        <p class="text-base font-bold tracking-wide">Social</p>
+                        <p data-translate="footerSocialTitle" class="text-base font-bold tracking-wide">Social</p>
                         <div class="flex items-center mt-2 space-x-4">
+                            <!-- Social icons here -->
+                            <!-- Example for one of the social media icons -->
                             <a href="/" class="text-gray-500 hover:text-purple-400 transition-colors duration-300">
-                                <svg viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
-                                    <path
-                                        d="M24,4.6c-0.9,0.4-1.8,0.7-2.8,0.8c1-0.6,1.8-1.6,2.2-2.7c-1,0.6-2,1-3.1,1.2c-0.9-1-2.2-1.6-3.6-1.6 c-2.7,0-4.9,2.2-4.9,4.9c0,0.4,0,0.8,0.1,1.1C7.7,8.1,4.1,6.1,1.7,3.1C1.2,3.9,1,4.7,1,5.6c0,1.7,0.9,3.2,2.2,4.1 C2.4,9.7,1.6,9.5,1,9.1c0,0,0,0,0,0.1c0,2.4,1.7,4.4,3.9,4.8c-0.4,0.1-0.8,0.2-1.3,0.2c-0.3,0-0.6,0-0.9-0.1c0.6,2,2.4,3.4,4.6,3.4 c-1.7,1.3-3.8,2.1-6.1,2.1c-0.4,0-0.8,0-1.2-0.1c2.2,1.4,4.8,2.2,7.5,2.2c9.1,0,14-7.5,14-14c0-0.2,0-0.4,0-0.6 C22.5,6.4,23.3,5.5,24,4.6z">
-                                    </path>
-                                </svg>
-                            </a>
-                            <a href="/" class="text-gray-500 hover:text-purple-400 transition-colors duration-300">
-                                <svg viewBox="0 0 30 30" fill="currentColor" class="h-6 w-6">
-                                    <circle cx="15" cy="15" r="4"></circle>
-                                    <path
-                                        d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z">
-                                    </path>
-                                </svg>
-                            </a>
-                            <a href="/" class="text-gray-500 hover:text-purple-400 transition-colors duration-300">
-                                <svg viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
-                                    <path
-                                        d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z">
-                                    </path>
-                                </svg>
+                                <!-- Example SVG icon -->
                             </a>
                         </div>
-                        <p class="mt-4 text-sm text-gray-400">
+                        <p data-translate="footerSocialDescription" class="mt-4 text-sm text-gray-400">
                             Bacon ipsum dolor amet short ribs pig sausage prosciutto chicken spare ribs salami.
                         </p>
                     </div>
                 </div>
                 <!-- Footer Bottom -->
-                <div
-                    class="flex flex-col-reverse items-center justify-between pt-5 border-t border-gray-700 lg:flex-row">
-                    <p class="text-sm text-gray-400">
+                <div class="flex flex-col-reverse items-center justify-between pt-5 border-t border-gray-700 lg:flex-row">
+                    <p data-translate="footerCopyright" class="text-sm text-gray-400">
                         © 2020 Lorem Inc. All rights reserved.
                     </p>
-                    <a href="mailto:email@mail.com"
-                        class="text-sm text-gray-400 hover:text-purple-400 transition-colors duration-300">
+                    <a href="mailto:email@mail.com" data-translate="footerEmail" class="text-sm text-gray-400 hover:text-purple-400 transition-colors duration-300">
                         email@mail.com
                     </a>
                 </div>
