--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-    <div id="cursor" class="fixed top-0 left-0 z-30 h-5 w-5 bg-purple-700 rounded-full"></div>
+    <div id="cursor" class="pointer-events-none fixed top-0 left-0 z-30 h-5 w-5 bg-purple-700 rounded-full"></div>
     <div id="loader"
         class="h-full w-full bg-gradient-to-r from-[#0C0712] to-black fixed top-0 left-0 z-40 flex items-center justify-center flex-col">
         <img src="./Assets/photos/Symbole_blanc.png" alt="loader" class="h-24 opacity-0">
