--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <div class="flex flex-col lg:flex-row lg:space-x-8 imgContainer">
                         <div class="lg:w-1/2 mb-8 lg:mb-0">
                             <img alt="Two people discussing a project in an office setting" class="rounded-lg w-full"
-                                height="400" src="./Assets/photos/about.jpg" width="600" />
+                                height="400" src="./Assets/photos/about.webp" width="600" />
                         </div>
                         <div class="lg:w-1/2 space-y-6">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
